# MiningSoft

./: CMakeLists.txt  Makefile  README.md  build.sh  com.miningsoft.monero-miner.plist  config.json  install_daemon.sh  manage_miner.sh  monero-miner  monitor_errors.sh  run_tests.sh  set_wallet.sh  test_cli  test_cli.cpp  test_interactive.sh  test_startup.sh  uninstall_daemon.sh
include/: cli_manager.h  config_manager.h  cpu_throttle_manager.h  error_handler.h  logger.h  memory_manager.h  metal_gpu.h  metal_gpu_simple.h  miner.h  multi_instance_manager.h  multi_pool_manager.h  performance_dashboard.h  performance_monitor.h  pool_connection.h  randomx.h  randomx_native.h  randomx_optimized.h  simple_json.h  startup_tests.h  test_framework.h  thermal_manager.h
scripts/: build.sh.in
src/: cli_manager.cpp  config_manager.cpp  cpu_throttle_manager.cpp  error_handler.cpp  logger.cpp  main.cpp  memory_manager.cpp  metal_gpu.cpp  metal_gpu_simple.cpp  miner.cpp  multi_pool_manager.cpp  performance_dashboard.cpp  performance_monitor.cpp  pool_connection.cpp  randomx.cpp  randomx_native.cpp  randomx_optimized.cpp  simple_json.cpp  startup_tests.cpp  test_framework.cpp  test_runner.cpp  thermal_manager.cpp
